syntax = "proto3";

package vocab;

option go_package = "vocab_service/proto";

message UpdateRequest {
    uint32 id = 1;
    string definition = 2;
    string token = 3;
}

message UpdateStatusRequest {
    uint32 id = 1;
    bool is_learned = 2;
    string token = 3;
}
